# TJURM-2024

./: CMakeLists.txt  README.md  run.sh
data/uniconfig/: CamLens.json  Config.json  guard.sh
include/data_manager/: base.h  param.h
include/garage/: garage.h  interface.h  wrapper_car.h  wrapper_rune.h  wrapper_tower.h
include/threads/: control.h  pipeline.h
include/threads/control/: crc.h  structure.h
src/: main.cpp
src/data_manager/: CMakeLists.txt  base.cpp  init.cpp  param.cpp
src/garage/: CMakeLists.txt  garage.cpp  wrapper_car.cpp  wrapper_rune.cpp  wrapper_tower.cpp
src/threads/: CMakeLists.txt  control.cpp  pipeline.cpp
src/threads/control/: crc.cpp  receive_thread.cpp  send_thread.cpp
src/threads/pipeline/: image_thread.cpp  recording_thread.cpp  ui.cpp
src/threads/pipeline/baseline/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
src/threads/pipeline/baseline/tracker/: locater.cpp  pointer.cpp  updater.cpp
src/threads/pipeline/fourpoints/: detector_thread.cpp  fourpoints.cpp  preprocessor_thread.cpp
src/threads/pipeline/rune/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
